--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -11,7 +11,7 @@
   border: solid;
 }
 .HeaderImg {
-  margin-bottom: 20px;
+  margin: 20px;
 }
 .filterForm {
   text-align: center;
@@ -24,7 +24,7 @@
   flex-direction: column;
   align-items: center;
   width: 50%;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 }
 .CharacterList {
   display: flex;
@@ -47,6 +47,9 @@
   border-top: yellow solid 20px;
   border-left: yellow solid 200px;
   border-right: yellow solid 200px;
+}
+.notFoundText {
+  margin: 50px 0;
 }
 
 /* Mediaqueries */
